logs/knowledge_base/bird200/build_knowledge_base_bird(4).log
  File "/home/hdl/project/fgvr_test/discovering.py", line 1885
    return
    ^
SyntaxError: 'return' outside function
